2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-key-manager.c: Updated credits.
    
2005-08-13  Adam Schreiber  <sadam@clemson.edu>
    * libseahorse/seahorse-key-store.c: Add back in
    creating a pixbufcellrenderer
    * daemon/seahorse-daemon.c:
    * daemon/seahorse-sharing.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-gtkstock.c:
    * libseahorse/seahorse-gtkstock.h:
    * libseahorse/seahorse-key-store.c:
    * libseahorse/seahorse-key-store.h
    * libseahorse/seahorse-widget.c:
    * pixmaps/Makefile.am:
    * src/main.c:
    * src/seahorse-key-manager.c: Made our icons themeable
    

2005-08-13  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-source.c: Fix some gpgme_ctx_t leakage.
    * HACKING: Updated docs
    * libseahorse/*.h: Added a little synopsis in each header.
    * libseahorse/seahorse-keyset.c: Fix bug where refreshing would cause a 
    bunch of spurious "added" or "removed" events. 
    * libseahorse/seahorse-dns-sd.c: DNS-SD now adds and removes key sources
    from the context properly. 
    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-pgp-source.c: Prevent loops loading keys over and over.
    * src/seahorse-keyserver-results.c: Match remote keys properly
    * libseahorse/seahorse-check-button-control.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c:
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-generate-druid.c:
    * src/seahorse-key-manager-store.c: Cleanup debug printing
    * libseahorse/seahorse-widget.c: Fix problem with SeahorseWidget destroying the
    internal GtkWidget twice.
    * src/seahorse-key-manager.c:
    * src/seahorse-keyserver-results.c: Set initial focus to tree view
    * libseahorse/seahorse-operation.c:
    * libseahorse/seahorse-operation.h: Rename seahorse_multi_operation_add