@@ -1,6 +1,7 @@
 2005-08-14  Nate Nielsen  <nielsen@memberwebs.com>
 
     * src/seahorse-key-manager.c: Updated credits.
+    * src/seahorse-key-manager-store.c: Fixed drag export of keys.
     
 2005-08-13  Adam Schreiber  <sadam@clemson.edu>
     * libseahorse/seahorse-key-store.c: Add back in
